# DoodleSS

./: ALGEBRA_ENGINE.md  CANVAS_CLEAR.md  DKLLW_CHART_CONVENTIONS.md  DOODLE_HFPSS_AGENT_BRIEF.md  E2_IMPORT_AUDIT.md  E2_PRESENTATION_INPUT.md  MANUAL_PERIODICITY.md  PROJECT_JSON_IO.md  README.md  USER_GUIDE.zh-CN.md  build.py  pyproject.toml  requirements.txt  run-latest.ps1  vercel.json
.codex/: CURRENT_STATE.md  PROJECT_HISTORY.md
.codex/logs/: 20260722T101601+0800.md  20260722T102007+0800.md  20260722T153507+0800.md  20260723T112945+0800.md  20260724T050845+0800.md  20260724T095301+0800.md
.codex/templates/: log_template.md
api/: index.py
backend/: app.py  audit_e2_import.py
backend/data/: project.json
backend/domain/: actions.py  algebra.py  algebra_labels.py  candidate_enumeration.py  dkllw_chart.py  e2_import.py  e2_presentation.py  fate.py  grading.py  history.py  logic_graph.py  manual_periodicity.py  migrations.py  models.py  page_periodicity.py  periodicity.py  periods.py  seed.py  (+5 more)
tests/: test_algebra_labels.py  test_atlas_products_actions.py  test_candidate_enumeration.py  test_cell_layout.py  test_clear_canvas.py  test_dkllw_api.py  test_dkllw_chart.py  test_domain_foundations.py  test_e2_import.py  test_e2_presentation.py  test_fate_and_periods.py  test_history.py  test_interactions.py  test_legacy_v153_import.py  test_logic_graph_ui.py  test_manual_periodicity.py  test_page_periodicity.py  test_page_periodicity_api.py  test_periodicity_propagation.py  test_project_json_io.py  test_smoke.py  test_structured_algebra.py  test_vercel_deployment.py
(+8 files in other folders)
